# tokenmaxxing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ccost/: __init__.py  blocks.py  cli.py  html.py  maxx.py  parse.py  pricing.py  report.py  schedule.py
tests/: test_blocks.py  test_cli.py  test_codex.py  test_maxx.py  test_parse.py  test_pricing.py  test_report.py  test_schedule.py
tests/fixtures/: sample.jsonl
tests/fixtures/codex/: rollout-2026-02-01T10-00-00-testsession.jsonl
