[project]
name = "ccost"
version = "0.4.0"
description = "See what your AI coding agents cost you — a fast, zero-config cost & cache-waste analyzer for Claude Code and Codex."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Naman Goyal" }]
keywords = ["claude", "claude-code", "codex", "openai", "cost", "tokens", "cli", "usage", "anthropic"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/namangoyal3/tokenmaxxing"
Issues = "https://github.com/namangoyal3/tokenmaxxing/issues"

[project.scripts]
ccost = "ccost.cli:main"
schedule = "ccost.schedule:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccost"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.pytest.ini_options]
pythonpath = ["src"]
